fix biome styling spacing

--- a/src/applicationA/biome.css
+++ b/src/applicationA/biome.css
@@ -76,5 +76,6 @@
   .cat_species h3 {
     margin: 10px 0 0;
     text-align: center;
+    font-size: 4rem;
   }
   
